@@ -32,7 +32,7 @@ public class ShopApiController {
     public ResponseEntity<?> createHoaDon(HttpSession session) {
         try {
             // Lấy trực tiếp đối tượng NhanVien từ session
-            NhanVien nhanVien = (NhanVien) session.getAttribute("user");
+            NhanVien nhanVien = (NhanVien) session.getAttribute("userNhanVien");
 
             if (nhanVien == null) {
                 return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
@@ -64,11 +64,12 @@ public class ShopApiController {
     public ResponseEntity<Map<String, String>> deleteHoaDon(@PathVariable("id") Integer hoaDonId, HttpSession session) {
         Map<String, String> response = new HashMap<>();
         try {
-            // Kiểm tra quyền trước khi xóa
-            Object user = session.getAttribute("user");
-            if (!(user instanceof NhanVien)) {
-                response.put("error", "🚨 Chỉ nhân viên mới có thể xóa hóa đơn");
-                return ResponseEntity.status(HttpStatus.FORBIDDEN).body(response);
+            // Lấy trực tiếp đối tượng NhanVien từ session
+            NhanVien nhanVien = (NhanVien) session.getAttribute("userNhanVien");
+
+            if (nhanVien == null) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                        .body(Map.of("message", "Vui lòng đăng nhập"));
             }
 
             shopService.deleteHoaDon(hoaDonId);
@@ -88,11 +89,12 @@ public class ShopApiController {
                                                   @RequestParam("khachHangId") Integer khachHangId,
                                                   HttpSession session) {
         try {
-            // Kiểm tra quyền
-            Object user = session.getAttribute("user");
-            if (!(user instanceof NhanVien)) {
-                return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                        .body(Collections.singletonMap("error", "Chỉ nhân viên mới có thể thêm khách hàng vào hóa đơn"));
+            // Lấy trực tiếp đối tượng NhanVien từ session
+            NhanVien nhanVien = (NhanVien) session.getAttribute("userNhanVien");
+
+            if (nhanVien == null) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                        .body(Map.of("message", "Vui lòng đăng nhập"));
             }
 
             String message = shopService.addCustomerToInvoice(hoaDonId, khachHangId);
@@ -214,11 +216,12 @@ public class ShopApiController {
     public ResponseEntity<Map<String, Object>> capNhatLoaiGiaoDich(@PathVariable Integer id, HttpSession session) {
         Map<String, Object> response = new HashMap<>();
         try {
-            // Kiểm tra quyền
-            Object user = session.getAttribute("user");
-            if (!(user instanceof NhanVien)) {
-                response.put("errorMessage", "Chỉ nhân viên mới có thể cập nhật loại giao dịch");
-                return ResponseEntity.status(HttpStatus.FORBIDDEN).body(response);
+            // Lấy trực tiếp đối tượng NhanVien từ session
+            NhanVien nhanVien = (NhanVien) session.getAttribute("userNhanVien");
+
+            if (nhanVien == null) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                        .body(Map.of("message", "Vui lòng đăng nhập"));
             }
 
             Optional<HoaDon> hoaDonOpt = hoaDonRepository.findById(id);
